--- a/angular-without-ssr/src/app/shared/components/bottom-nav/bottom-nav.component.scss
+++ b/angular-without-ssr/src/app/shared/components/bottom-nav/bottom-nav.component.scss
@@ -4,7 +4,7 @@ $bottom-nav-height: 3.5rem;
 
 .bottom-nav {
   display: none;
-  position: fixed;
+  position: sticky;
   bottom: 0;
   left: 0;
   right: 0;
@@ -13,6 +13,7 @@ $bottom-nav-height: 3.5rem;
   border-top: 1.5px solid $color-border;
   padding-bottom: env(safe-area-inset-bottom, 0px);
   height: calc(#{$bottom-nav-height} + env(safe-area-inset-bottom, 0px));
+  flex-shrink: 0;
   align-items: flex-start;
   justify-content: space-around;
   box-shadow: 0 -2px 12px rgba(0, 0, 0, 0.06);
